<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calculadora-cliente</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="primeiroNumero">Termo 1</string>
    <string name="segundoNumero">Termo 2</string>
    <string name="btSomar">Somar</string>
    <string name="labelResultado">Resultado da soma é:</string>
    <string name="resultadoSoma"></string>

</resources>
